--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <base href="">
 
   <meta charset="utf-8">
-  <title>LearnDhis</title>
+  <title>datastore-import/export</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -21,6 +21,5 @@
 </head>
 <body>
   <app-root></app-root>
-
 </body>
 </html>
